[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "rust_thread_executor"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
