workspace = { members = ["processpoolexecutor"] }
[package]
name = "threadpoolexecutor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "^0.1.14"
futures-cpupool = "^0.1.5"
log = "^0.3.0"
tokio-core = "^0.1.6"

[dev-dependencies]
rand = "^0.3"
